--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "app_main.c"
+idf_component_register(SRCS "sevensegment_c_connector.cpp" "app_main.c" "led_C_connector.cpp"
                     INCLUDE_DIRS ".")
